<resources>
    <string name="app_name">Novance</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="novance_logo">Novance Logo</string>
    <string name="register">REGISTER</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="email_or_password_is_incorrect">*Email or password is incorrect</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_feed">Feed</string>
    <string name="title_featured">Featured</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="featured">Featured</string>
    <string name="search">Search</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="lowerCaseUsername">username</string>
    <string name="atUsername">\@username</string>
    <string name="user_profile_image">User profile image</string>
    <string name="bio">Bio</string>
    <string name="startup_name">Startup Name</string>
    <string name="startup_cover_image">Startup cover image</string>
    <string name="startup_description">Startup description...</string>
    <string name="right_arrow">Right arrow</string>
    <string name="title_activity_settings">Settings</string>
    <string name="at">\@</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="messages">Messages</string>
    <string name="analytics">Analytics</string>
    <string name="saved_startups">Saved Startups</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="save">Save</string>
    <string name="novance">Novance</string>
    <string name="sample_startup_description">Novance is a social media application meant to bring investors and startups together.</string>
    <string name="sample_bio">Head software engineer for Novance.</string>
    <string name="matt_bishop">Matt Bishop</string>
    <string name="toolbar_logo">Toolbar Logo</string>
    <string name="add_post_button">Add post button</string>

    <!-- Profile Picture -->
    <string name="action_settings">Settings</string>
    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <!-- font families -->
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
</resources>
