<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_view_headline_black_24dp"
        android:title="@string/feed" />

    <item
        android:id="@+id/navigation_featured"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/featured" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />

</menu>
