<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_feed">

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.novance.novance.ui.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_featured"
        android:name="com.novance.novance.ui.featured.FeaturedFragment"
        android:label="@string/title_featured"
        tools:layout="@layout/fragment_featured" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.novance.novance.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.novance.novance.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.novance.novance.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>