<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#243248"
    tools:context=".LoginActivity"
    android:theme="@style/LoginTheme">

    <RelativeLayout
        android:id="@+id/innerLayout"
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:layout_centerInParent="true"
        android:backgroundTint="#CFDBE9">

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:backgroundTint="#CFDBE9"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#CFDBE9"
            android:textColorHint="#CFDBE9" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/novanceLogoLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:backgroundTint="#CFDBE9"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#CFDBE9"
            android:textColorHint="#CFDBE9" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/login_button_bg"
            android:text="@string/login"
            android:textColor="#CFDBE9"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/novanceLogoLogin"
            android:layout_width="281dp"
            android:layout_height="222dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/novance_logo"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/createAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:text="@string/create_account"
            android:textColor="#CFDBE9"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/incorrectTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/email_or_password_is_incorrect"
            android:textColor="#F44336"
            android:visibility="invisible" />

    </RelativeLayout>

</RelativeLayout>