<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".EditProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/editProfileImageView"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/user_profile_image"
        android:src="@drawable/ic_account_circle_black_240dp" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"></include>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editProfileImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:backgroundTint="@color/novance_grey"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName|text"
        android:maxLength="30"
        android:textColor="@color/novance_blue"
        android:textColorHint="@color/novance_blue"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameEditText"
        android:layout_alignEnd="@+id/nameEditText"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-7dp"
        android:autofillHints="username"
        android:backgroundTint="@color/novance_grey"
        android:ems="10"
        android:hint="@string/lowerCaseUsername"
        android:inputType="textPersonName|text"
        android:maxLength="20"
        android:textColor="@color/novance_mid_blue"
        android:textColorHint="@color/novance_mid_blue"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/bioEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameEditText"
        android:layout_alignStart="@+id/nameEditText"
        android:layout_alignEnd="@+id/nameEditText"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:autofillHints="bio"
        android:backgroundTint="@color/novance_grey"
        android:ems="10"
        android:hint="@string/bio"
        android:inputType="textPersonName|text|textMultiLine"
        android:maxLength="200"
        android:text="@string/sample_bio"
        android:textColor="@color/novance_mid_blue"
        android:textColorHint="@color/novance_mid_blue"
        android:textSize="14sp" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bioEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/save"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/atTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameEditText"
        android:layout_alignStart="@+id/bioEditText"
        android:layout_alignBottom="@+id/usernameEditText"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toStartOf="@+id/usernameEditText"
        android:gravity="center"
        android:text="@string/at"
        android:textColor="@color/novance_mid_blue" />

    <!-- Image Cropper fill the remaining available height -->
    <com.theartofdev.edmodo.cropper.CropImageView xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cropImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editProfileImageView"
        android:layout_marginStart="-50dp"
        android:layout_marginTop="-13dp"
        android:layout_toEndOf="@+id/editProfileImageView"
        android:text="@string/tap_image_to_change"
        android:textColor="@color/novance_grey"
        android:textSize="10sp" />

</RelativeLayout>