<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/rightArrowImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startupNameTextView"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/right_arrow"
        app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp" />

    <TextView
        android:id="@+id/startupNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/videoFrameLayout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/novance"
        android:textColor="@color/novance_blue"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/startupDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startupNameTextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_toStartOf="@+id/rightArrowImageView"
        android:text="@string/sample_startup_description"
        android:textColor="@color/novance_mid_blue"
        android:textSize="12sp" />

    <FrameLayout
        android:id="@+id/videoFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileImageView2"
        android:layout_marginTop="5dp">

        <VideoView
            android:id="@+id/startupVideoView"
            android:layout_width="match_parent"
            android:layout_height="240dp" />
    </FrameLayout>

    <ImageView
        android:id="@+id/profileImageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/user_profile_image"
        app:srcCompat="@drawable/senior_photo_circle_" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/feed_toolbar"></include>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="3dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/profileImageView2"
        android:text="@string/matt_bishop"
        android:textColor="@color/novance_blue"
        android:textSize="12sp" />

</RelativeLayout>